--- a/index.html
+++ b/index.html
@@ -1,35 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <!-- Poppins Font Link -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | Profile card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+      margin-top: 2vh;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-  Victor Crest
-  26
-  London
-
-  80K
-  Followers
-
-  803K
-  Likes
-
-  1.4K
-  Photos
+  <div class="profile-card">
+    <div class="profile-card-header">
+      <img src="/images/bg-pattern-card.svg" alt="card background pattern">
+    </div>
+    <div class="profile-card-body">
+      <div class="profile-image">
+        <img src="/images/image-victor.jpg" alt="user image victor">
+      </div>
+      <div class="profile-details">
+        <p class="name">Victor Crest <span class="age">26</span></p>
+        <h4>London</h4>
+      </div>
+    </div>
+    <div class="profile-footer">
+      <div>
+        <h3>80K</h3>
+        <p>Followers</p>
+      </div>
+      <div>
+        <h3>803K</h3>
+        <p>Likes</p>
+      </div>
+      <div>
+        <h3>1.4K</h3>
+        <p>Photos</p>
+      </div>
+    </div>
+  </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://github.com/rohan-kavade">Rohan Kavade</a>.
   </div>
 </body>
+
 </html>
